--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "graduate-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/nodejs/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.1",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "parser": "^0.1.4",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
-
 }
