--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.19.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
-    "parser": "^0.1.4",
-    "pug": "^3.0.2"
+    "parser": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
