--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.19.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
-    "parser": "^0.1.4"
+    "parser": "^0.1.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
