--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
+    "node-localstorage": "^3.0.5",
     "parser": "^0.1.4",
     "validator": "^13.11.0"
   },
