--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
     "parser": "^0.1.4",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
